--- a/ocamlopt/Makefile
+++ b/ocamlopt/Makefile
@@ -7,7 +7,7 @@ include ${OCAMLLIB}/Makefile.config
 ocamlopt.dyn: optmain.ml Makefile
 	ocamlopt -g -I +compiler-libs -o ocamlopt.dyn \
 	    ocamlcommon.cmxa ocamlbytecomp.cmxa ocamloptcomp.cmxa \
-	    -ccopt "$(BYTECCLINKOPTS)" optmain.ml
+	    -ccopt "$(NATDYNLINKOPTS)" optmain.ml
 
 clean:
 	rm -f *~ *.cm? *.o ocamlopt.dyn
